--- a/ios/Classes/AzureCommunicationUICalling/AzureCommunicationUI/sdk/AzureCommunicationUICalling/Sources/Localization/nb-NO.lproj/Localizable.strings
+++ b/ios/Classes/AzureCommunicationUICalling/AzureCommunicationUI/sdk/AzureCommunicationUICalling/Sources/Localization/nb-NO.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 
 /* SetupView */
 "AzureCommunicationUICalling.SetupView.Title"="Oppsett";
+"AzureCommunicationUICalling.SetupView.SubTitle"="Check your video and audio.";
 "AzureCommunicationUICalling.SetupView.Button.Dismiss.AccessibilityLabel"="Tilbake";
 "AzureCommunicationUICalling.SetupView.Button.JoinCall"="Bli med i samtale";
 "AzureCommunicationUICalling.SetupView.Button.StartCall"="Start call";
