--- a/ios/Classes/AzureCommunicationUICalling/AzureCommunicationUI/sdk/AzureCommunicationUICalling/Sources/Localization/nl-NL.lproj/Localizable.strings
+++ b/ios/Classes/AzureCommunicationUICalling/AzureCommunicationUI/sdk/AzureCommunicationUICalling/Sources/Localization/nl-NL.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 
 /* SetupView */
 "AzureCommunicationUICalling.SetupView.Title"="Configuratie";
+"AzureCommunicationUICalling.SetupView.SubTitle"="Check your video and audio.";
 "AzureCommunicationUICalling.SetupView.Button.Dismiss.AccessibilityLabel"="Terug";
 "AzureCommunicationUICalling.SetupView.Button.JoinCall"="Deelnemen aan gesprek";
 "AzureCommunicationUICalling.SetupView.Button.StartCall"="Start call";
