Add background effect button, add logic to enable and disable background effect button, add logic to switch camera, add layout for display name textfield

--- a/ios/Classes/AzureCommunicationUICalling/AzureCommunicationUI/sdk/AzureCommunicationUICalling/Sources/Localization/en.lproj/Localizable.strings
+++ b/ios/Classes/AzureCommunicationUICalling/AzureCommunicationUI/sdk/AzureCommunicationUICalling/Sources/Localization/en.lproj/Localizable.strings
@@ -16,6 +16,7 @@
 "AzureCommunicationUICalling.SetupView.Title"="Start your call";
 "AzureCommunicationUICalling.SetupView.SubTitle"="Check your video and audio.";
 "AzureCommunicationUICalling.SetupView.Button.Dismiss.AccessibilityLabel"="Back";
+"AzureCommunicationUICalling.SetupView.Placeholder"="Display name";
 "AzureCommunicationUICalling.SetupView.Button.JoinCall"="Start call";
 "AzureCommunicationUICalling.SetupView.Button.StartCall"="Start call";
 "AzureCommunicationUICalling.SetupView.Button.JoiningCall"="Joining call…";
