--- a/ios/Classes/AzureCommunicationUICalling/AzureCommunicationUI/sdk/AzureCommunicationUICalling/Sources/Localization/nb.lproj/Localizable.strings
+++ b/ios/Classes/AzureCommunicationUICalling/AzureCommunicationUI/sdk/AzureCommunicationUICalling/Sources/Localization/nb.lproj/Localizable.strings
@@ -11,6 +11,8 @@
 "AzureCommunicationUICalling.AudioDevice.DeviceDrawer.Headphones"="Hodetelefoner";
 "AzureCommunicationUICalling.AudioDevice.DeviceDrawer.Bluetooth"="Bluetooth";
 "AzureCommunicationUICalling.AudioDevice.Drawer.Selected.ChooseAudioHeader"= "Choose audio";
+"AzureCommunicationUICalling.AudioDevice.Drawer.Selected.SelectNoiseSuppression"= "Noise suppression";
+
 
 /* SetupView */
 "AzureCommunicationUICalling.SetupView.Title"="Oppsett";
