Create business logic for meeting options

--- a/ios/Classes/AzureCommunicationUICalling/AzureCommunicationUI/sdk/AzureCommunicationUICalling/Sources/Localization/en.lproj/Localizable.strings
+++ b/ios/Classes/AzureCommunicationUICalling/AzureCommunicationUI/sdk/AzureCommunicationUICalling/Sources/Localization/en.lproj/Localizable.strings
@@ -118,6 +118,17 @@
 "AzureCommunicationUICalling.CallingView.MoreCallOptionsList.ShareDiagnosticsInfo" = "Share diagnostics info";
 "AzureCommunicationUICalling.CallingView.GridView.Calling"="Calling...";
 
+/*Meeting options*/
+"AzureCommunicationUICalling.CallingView.MeetingOptions.Chat"="Chat";
+"AzureCommunicationUICalling.CallingView.MeetingOptions.Participants"="Participants";
+"AzureCommunicationUICalling.CallingView.MeetingOptions.Effects"="Effects";
+"AzureCommunicationUICalling.CallingView.MeetingOptions.RaiseHand"="Raise hand";
+"AzureCommunicationUICalling.CallingView.MeetingOptions.LowerHand"="Lower hand";
+"AzureCommunicationUICalling.CallingView.MeetingOptions.ChangeView"="Change view";
+"AzureCommunicationUICalling.CallingView.MeetingOptions.ShareScreen"="Share screen";
+"AzureCommunicationUICalling.CallingView.MeetingOptions.StopShareScreen"="Stop sharing";
+
+
 
 /* ComplianceBanner title */
 "AzureCommunicationUICalling.CallingView.BannerTitle.RecordingAndTranscribingStarted"="Recording and transcription have started.";
