--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="start_your_call" translatable="false">Start your call</string>
     <string name="check_your_video_audio" translatable="false">Check your video and audio.</string>
     <string name="user_name" translatable="false">User Name</string>
+    <string name="choose_audio" translatable="false">Choose audio</string>
+    <string name="turn_off_audio" translatable="false">Turn off the audio</string>
+    <string name="noise_suppression" translatable="false">Noise suppression</string>
 </resources>
