--- a/ios/Classes/AzureCommunicationUICalling/AzureCommunicationUI/sdk/AzureCommunicationUICalling/Sources/Localization/en.lproj/Localizable.strings
+++ b/ios/Classes/AzureCommunicationUICalling/AzureCommunicationUI/sdk/AzureCommunicationUICalling/Sources/Localization/en.lproj/Localizable.strings
@@ -133,7 +133,7 @@
 
 /* ComplianceBanner title */
 "AzureCommunicationUICalling.CallingView.BannerTitle.RecordingAndTranscribingStarted"="Recording and transcription have started.";
-"AzureCommunicationUICalling.CallingView.BannerTitle.RecordingStarted"="Recording has started.";
+"AzureCommunicationUICalling.CallingView.BannerTitle.RecordingStarted"="This meeting is being recorded";
 "AzureCommunicationUICalling.CallingView.BannerTitle.TranscriptionStoppedStillRecording"="Transcription has stopped.";
 "AzureCommunicationUICalling.CallingView.BannerTitle.TranscriptionStarted"="Transcription has started.";
 "AzureCommunicationUICalling.CallingView.BannerTitle.TranscriptionStopped"="Transcription is being saved.";
@@ -210,4 +210,5 @@
 "AzureCommunicationUICalling.CallingView.ParticipantMenu.Remove.AccessibilityLabel"="Remove participant from call menu.";
 "AzureCommunicationUICalling.CallingView.Toast.FeaturesLost"="Call settings updated. Some features may not be available to you.";
 "AzureCommunicationUICalling.CallingView.Toast.FeaturesGained"="Call settings updated. Some additional actions may now be available to you.";
+"AzureCommunicationUICalling.EmptyString" = "";
 
