--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="turn_off_audio" translatable="false">Turn off the audio</string>
     <string name="noise_suppression" translatable="false">Noise suppression</string>
     <string name="participant_list" translatable="false">Participants (%d)</string>
-    <string name="share_meeting_link" translatable="false">Share meeting link</string>
+    <string name="share_meeting_link_title" translatable="false">Share meeting link</string>
     <string name="chat" translatable="false">Chat</string>
     <string name="participants" translatable="false">Participants</string>
     <string name="turn_blur_off" translatable="false">Turn blur off</string>
@@ -21,4 +21,5 @@
     <string name="emoji_surprised" translatable="false">😮</string>
     <string name="emoji_applause" translatable="false">👏</string>
     <string name="emoji_like" translatable="false">👍</string>
+    <string name="share_meeting_link" translatable="false">https://msteam.desktop.superbrains.nl/meeting?roomId=%s</string>
 </resources>
