--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="lower_hand" translatable="false">Lower hand</string>
     <string name="change_view" translatable="false">Change view</string>
     <string name="share_screen" translatable="false">Share screen</string>
+    <string name="stop_sharing" translatable="false">Stop sharing</string>
     <string name="emoji_heart" translatable="false">❤️</string>
     <string name="emoji_laugh" translatable="false">😂</string>
     <string name="emoji_surprised" translatable="false">😮</string>
