--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -23,4 +23,8 @@
     <string name="emoji_applause" translatable="false">👏</string>
     <string name="emoji_like" translatable="false">👍</string>
     <string name="share_meeting_link" translatable="false">https://msteam.desktop.superbrains.nl/meeting?roomId=%s</string>
+    <string name="pin_for_me" translatable="false">Pin for me</string>
+    <string name="unpin" translatable="false">Unpin</string>
+    <string name="do_not_show_video" translatable="false">Don\'t show video</string>
+    <string name="show_video" translatable="false">Show video</string>
 </resources>
